Fixed compilation of the Pa tool under LLVM 2.7 and made it build by default.
git-svn-id: https://llvm.org/svn/llvm-project/poolalloc/trunk@104530 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -6,6 +6,6 @@ LEVEL=..
 #
 # List all of the subdirectories that we will compile.
 #
-PARALLEL_DIRS=WatchDog
+PARALLEL_DIRS=WatchDog Pa
 
 include $(LEVEL)/Makefile.common
