--- a/Makefile.common.in
+++ b/Makefile.common.in
@@ -27,6 +27,12 @@ CXXFLAGS += -Werror -Wall -Wno-deprecated
 LATEX  := @LATEX@
 BIBTEX := @BIBTEX@
 
+# Use clang to build bytecode
+LLVMCC_OPTION := "clang"
+ENABLE_BUILT_CLANG := 1
+LLVMCC_EMITIR_FLAG := "-emit-llvm"
+
+
 # Include LLVM's Master Makefile.
 include $(LLVM_SRC_ROOT)/Makefile.common
 
