--- a/runtime/DynCount/Makefile
+++ b/runtime/DynCount/Makefile
@@ -25,7 +25,7 @@ CXX.Flags += -fno-threadsafe-statics
 # of LLVM.
 #
 ifneq ($(OS),Darwin)
-BYTECODE_LIBRARY=1
+#BYTECODE_LIBRARY=1
 endif
 
 include $(LEVEL)/Makefile.common
