--- a/runtime/FL2Allocator/Makefile
+++ b/runtime/FL2Allocator/Makefile
@@ -23,7 +23,7 @@ CXXFLAGS += -fno-exceptions
 # of LLVM.
 #
 ifneq ($(OS),Darwin)
-BYTECODE_LIBRARY=1
+#BYTECODE_LIBRARY=1
 endif
 
 include $(LEVEL)/Makefile.common
