--- a/runtime/PreRT/Makefile
+++ b/runtime/PreRT/Makefile
@@ -7,7 +7,7 @@ LIBRARYNAME=pa_pre_rt
 # of LLVM.
 #
 ifneq ($(OS),Darwin)
-BYTECODE_LIBRARY=1
+#BYTECODE_LIBRARY=1
 endif
 
 include $(LEVEL)/Makefile.common
