CMake list updates/fixes, test integration.
* Lit test support ('check-poolalloc' target)
* Add missing files to CMakeLists files
* Fix missing deps on intrinsics_gen
* "Fix" the naming of the libraries produced by CMake to match
  what our Makefile-driven build does (no 'lib' prefix). Messy, but
  for now trying to ensure compatibility with our client projects
  that rely on the current naming convention.
* Drop the 'tools' hack (dsaopt, etc) from the testing code,
  turning them into simple substitutions instead.  See lit.cfg.
* Emit generated config.h into build tree, not source tree.
* For now, avoid redundant definitions of tests our config.h
  and LLVM's share by dropping an include.  Should revisit.

git-svn-id: https://llvm.org/svn/llvm-project/poolalloc/trunk@161202 91177308-0d34-0410-b5e6-96231b3b80d8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
+                    ${CMAKE_CURRENT_BINARY_DIR}/include)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/poolalloc/Config/config.h.cmake
-               ${CMAKE_CURRENT_SOURCE_DIR}/include/poolalloc/Config/config.h)
+               ${CMAKE_CURRENT_BINARY_DIR}/include/poolalloc/Config/config.h)
 add_subdirectory(lib)
 add_subdirectory(runtime)
 add_subdirectory(tools)
+add_subdirectory(test)
