--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -224,6 +224,18 @@ for pattern in [r"\bbugpoint\b(?!-)",   r"(?<!/|-)\bclang\b(?!-)",
              break
     config.substitutions.append((pattern, substitution))
 
+
+### Helper tools
+
+dsa_so = config.llvm_shlib_dir + "/LLVMDataStructure" + config.llvm_shlib_ext
+adsa_so = config.llvm_shlib_dir + "/AssistDS" + config.llvm_shlib_ext
+pa_so = config.llvm_shlib_dir + "/poolalloc" + config.llvm_shlib_ext
+config.substitutions.append((r'\bdsaopt\b', 'opt -load ' + dsa_so))
+config.substitutions.append((r'\badsaopt\b', 'opt -load ' + dsa_so
+                                              + ' -load ' + adsa_so))
+config.substitutions.append((r'\bpaopt\b', 'opt -load ' + dsa_so
+                                              + ' -load ' + pa_so))
+
 ### Features
 
 # Shell execution
